<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Sunshine</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_map">View user location</string>

    <string name="title_activity_detail" translatable="false">DetailActivity</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>

    <string name="pref_location_title">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">94107,us</string>

    <string name="pref_units_title">Pick your units</string>
    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_units_default" translatable="false">@string/pref_units_metric_value</string>

    <string name="pref_units_metric_entry">Metric</string>
    <string name="pref_units_metric_value" translatable="false">metric</string>
    <string name="pref_units_imperial_entry">Imperial</string>
    <string name="pref_units_imperial_value" translatable="false">imperial</string>

    <string name="menu_item_share_title">Share</string>

</resources>
