<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- key is the name to be used when pulling this value from Shared Preferences -->
    <EditTextPreference
        android:title="@string/pref_location_title"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true"/>

    <ListPreference
        android:title="@string/pref_units_title"
        android:key="@string/pref_units_key"
        android:entries="@array/pref_units_entries"
        android:entryValues="@array/pref_units_values"
        android:defaultValue="@string/pref_units_default"
        />

</PreferenceScreen>